fix: improve ui
todo: figure out if vh is causing the scrollbar issues

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -1,7 +1,7 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 0;
   font-weight: normal;
   display: flex;
@@ -10,11 +10,6 @@
 }
 
 @media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
   #app {
     width: 100%;
     padding: 0 0;
